--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pidgorny-gen",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,9 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@balkangraph/familytree.js": "^1.7.9",
+    "axios": "^1.2.0",
+    "dotenv": "^16.0.3",
+    "find-up": "^6.3.0",
+    "invariant": "^2.2.4",
+    "json-sql": "^0.5.0",
+    "mysql2": "^2.3.3",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tiny-invariant": "^1.3.1",
+    "ts-node": "^10.9.1",
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
@@ -19,6 +31,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "prettier": "^2.8.0",
     "typescript": "4.9.3"
   }
 }
