--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@balkangraph/familytree.js": "^1.7.9",
+    "aws-sdk-v3-proxy": "^2.0.13",
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
     "find-up": "^6.3.0",
