--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "vercel:build": "echo $CA_CERTIFICATE_CRT > ca-certificate.crt && ls -l && npm run build"
   },
   "dependencies": {
-    "@balkangraph/familytree.js": "^1.7.9",
+    "@balkangraph/familytree.js": "^1.7.18",
     "aws-sdk-v3-proxy": "^2.0.13",
-    "axios": "^1.2.0",
-    "directory-tree": "^3.4.0",
+    "axios": "^1.2.2",
+    "directory-tree": "^3.5.1",
     "dotenv": "^16.0.3",
     "find-up": "^6.3.0",
     "invariant": "^2.2.4",
     "json-sql": "^0.5.0",
     "mysql2": "^2.3.3",
-    "next": "13.0.4",
+    "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tiny-invariant": "^1.3.1",
@@ -29,12 +29,12 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
-    "prettier": "^2.8.0",
-    "typescript": "4.9.3"
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "prettier": "^2.8.1",
+    "typescript": "4.9.4"
   }
 }
