--- a/package.json
+++ b/package.json
@@ -5,36 +5,38 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "vercel:build": "echo $CA_CERTIFICATE_CRT > ca-certificate.crt && ls -l && npm run build"
   },
   "dependencies": {
-    "@balkangraph/familytree.js": "^1.7.18",
-    "aws-sdk-v3-proxy": "^2.0.13",
-    "axios": "^1.2.2",
+    "@balkangraph/familytree.js": "^1.9.17",
+    "aws-sdk-v3-proxy": "^2.1.2",
+    "axios": "^1.6.8",
     "directory-tree": "^3.5.1",
-    "dotenv": "^16.0.3",
-    "find-up": "^6.3.0",
+    "dotenv": "^16.4.5",
+    "find-up": "^7.0.0",
     "invariant": "^2.2.4",
     "json-sql": "^0.5.0",
-    "mysql2": "^2.3.3",
-    "next": "13.1.1",
+    "mysql2": "^3.9.3",
+    "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tiny-invariant": "^1.3.1",
-    "ts-node": "^10.9.1",
+    "tiny-invariant": "^1.3.3",
+    "ts-node": "^10.9.2",
     "xml-js": "^1.6.11",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
-    "prettier": "^2.8.1",
-    "typescript": "4.9.4"
+    "@types/node": "20.12.2",
+    "@types/react": "18.2.73",
+    "@types/react-dom": "18.2.23",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.4",
+    "prettier": "^3.2.5",
+    "tsx": "^4.7.1",
+    "typescript": "5.4.3"
   }
 }
