--- a/package.json
+++ b/package.json
@@ -12,33 +12,35 @@
     "vercel:build": "echo $CA_CERTIFICATE_CRT > ca-certificate.crt && ls -l && npm run build"
   },
   "dependencies": {
-    "@balkangraph/familytree.js": "^1.9.17",
+    "@balkangraph/familytree.js": "^1.9.35",
     "aws-sdk-v3-proxy": "^2.1.2",
     "axios": "^1.6.8",
-    "directory-tree": "^3.5.1",
     "bootstrap": "^5.3.3",
+    "directory-tree": "^3.5.1",
     "dotenv": "^16.4.5",
     "find-up": "^7.0.0",
     "invariant": "^2.2.4",
     "json-sql": "^0.5.0",
-    "mysql2": "^3.9.3",
-    "next": "14.1.4",
+    "mysql2": "^3.9.6",
+    "next": "14.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-sliding-pane": "^7.3.0",
+    "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
     "ts-node": "^10.9.2",
     "xml-js": "^1.6.11",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@types/node": "20.12.5",
-    "@types/react": "18.2.74",
-    "@types/react-dom": "18.2.24",
-    "eslint": "9.0.0",
-    "eslint-config-next": "14.1.4",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
+    "eslint": "9.1.0",
+    "eslint-config-next": "14.2.2",
     "prettier": "^3.2.5",
     "tsx": "^4.7.2",
-    "typescript": "5.4.4"
+    "typescript": "5.4.5"
   },
   "prettier": {
     "useTabs": true,
