--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@balkangraph/familytree.js": "^1.9.35",
+    "@types/pg": "^8.11.5",
     "aws-sdk-v3-proxy": "^2.1.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
@@ -24,6 +25,7 @@
     "json-sql": "^0.5.0",
     "mysql2": "^3.9.6",
     "next": "14.2.2",
+    "pg": "^8.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-sliding-pane": "^7.3.0",
