--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-dom": "18.2.25",
     "eslint": "9.1.0",
     "eslint-config-next": "14.2.2",
+    "generate-gedcom": "^1.0.1",
     "prettier": "^3.2.5",
     "tsx": "^4.7.2",
     "typescript": "5.4.5"
