--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel:build": "echo $CA_CERTIFICATE_CRT > ca-certificate.crt && ls -l && npm run build"
+    "vercel:build": "echo $CA_CERTIFICATE_CRT > ca-certificate.crt && ls -l && npm run build",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@balkangraph/familytree.js": "^1.9.35",
+    "@svgdotjs/svg.js": "^3.2.0",
+    "@svgdotjs/svg.panzoom.js": "^2.1.2",
     "@types/pg": "^8.11.5",
+    "apextree": "^1.1.0",
     "aws-sdk-v3-proxy": "^2.1.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "d3-flextree": "^2.1.2",
     "directory-tree": "^3.5.1",
     "dotenv": "^16.4.5",
     "find-up": "^7.0.0",
@@ -29,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-sliding-pane": "^7.3.0",
+    "spidgorny-react-helpers": "https://github.com/spidgorny/react-helpers",
     "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
     "ts-node": "^10.9.2",
@@ -42,6 +48,7 @@
     "eslint": "9.1.0",
     "eslint-config-next": "14.2.2",
     "generate-gedcom": "^1.0.1",
+    "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
     "tsx": "^4.7.2",
     "typescript": "5.4.5"
