--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aws-sdk-v3-proxy": "^2.1.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "d3-flextree": "^2.1.2",
     "directory-tree": "^3.5.1",
     "dotenv": "^16.4.5",
@@ -32,7 +33,9 @@
     "mysql2": "^3.9.7",
     "next": "14.2.3",
     "pg": "^8.11.5",
+    "pg-promise": "^11.6.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "18.2.0",
     "react-sliding-pane": "^7.3.0",
     "spidgorny-react-helpers": "https://github.com/spidgorny/react-helpers",
