--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-sliding-pane": "^7.3.0",
+    "sharp": "^0.33.3",
     "spidgorny-react-helpers": "https://github.com/spidgorny/react-helpers",
     "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
