--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.563.0",
-    "@aws-sdk/lib-storage": "^3.563.0",
+    "@aws-sdk/client-s3": "^3.565.0",
+    "@aws-sdk/lib-storage": "^3.565.0",
     "@balkangraph/familytree.js": "^1.9.35",
     "@svgdotjs/svg.js": "^3.2.0",
     "@svgdotjs/svg.panzoom.js": "^2.1.2",
@@ -37,29 +37,31 @@
     "next": "14.2.3",
     "pg": "^8.11.5",
     "pg-promise": "^11.6.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-drag-drop-files": "^2.3.10",
     "react-sliding-pane": "^7.3.0",
+    "react-widgets": "^5.8.4",
     "sharp": "^0.33.3",
     "spidgorny-react-helpers": "https://github.com/spidgorny/react-helpers",
     "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
     "ts-node": "^10.9.2",
+    "usehooks-ts": "^3.1.0",
     "xml-js": "^1.6.11",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "eslint": "9.1.1",
     "eslint-config-next": "14.2.3",
     "generate-gedcom": "^1.0.1",
     "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
-    "tsx": "^4.7.2",
+    "tsx": "^4.8.2",
     "typescript": "5.4.5"
   },
   "prettier": {
