--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "spidgorny-react-helpers": "https://github.com/spidgorny/react-helpers",
     "swr": "^2.3.0",
     "tiny-invariant": "^1.3.3",
+    "transliteration": "^2.3.5",
     "ts-node": "^10.9.2",
     "usehooks-ts": "^3.1.0",
     "xml-js": "^1.6.11",
